ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - host : springboot.local
        http:
          paths:
            - path: /
              pathType: Prefix 
              backend:
                service:
                  name: springboot
                  port:
                    number: 8080
